--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<h1 class="title">Tunnel CMS</h1>
 	<p>Tunnel CMS is the simplest markdown CMS. It parses markdown files and outputs html in real time whenever necessary. However, not every request requires parsing, as Tunnel CMS builds the HTML files and store in cache. Until, the underlying content of the markdown files is changes, the cached HTML is served.</p>
 <h2>🛠️ Installation</h2>
-<p>Download the <code>tunnel</code> folder along with the <code>.htaccess</code> file from the <a href="https://github.com/ReactiveMatter/tunnelcms">Github directory</a> <code>https://github.com/ReactiveMatter/tunnelcms</code>. Place them in the root of your website, and that's it!</p>
+<p>Download the <code>tunnel</code> folder along with the <code>.htaccess</code> file from the <a href="https://github.com/ReactiveMatter/tunnelcms">Github directory</a> <code>https://github.com/ReactiveMatter/tunnelcms</code>.</p>
+<p>Place them in the root of your website, and run <code>composer install</code> in tunnel directory.</p>
+<p>If you don't want to use composer, download the <a href="https://github.com/ReactiveMatter/tunnelcms/releases/tag/public">latest release</a> and place them in the root of your website.</p>
 <p>Tunnel CMS will render your markdown files dynamically, so that you can focus on writing.</p>
 <h2>📝 YAML frontmatter</h2>
 <p>Tunnel CMS parses YAML front matter from the markdown files and serializes them in the <code>$page</code> variable. This can be used by the layout to display content.</p>
@@ -83,6 +85,8 @@
 </table>
 <p>Custom variable can be defined in config file, which can be used in the layout files.</p>
 <h2>📜 Feed</h2>
-<p>If the a feed generating file exists at <code>tunnel/layout/feed.php</code>, it will be called during the <code>buildsite</code> process. The code for generating feeds can be included in this file.</p>	</div>
+<p>If the a feed generating file exists at <code>tunnel/layout/feed.php</code>, it will be called during the <code>buildsite</code> process. The code for generating feeds can be included in this file.</p>
+<h2>License</h2>
+<p>This project is licensed under the MIT License.</p>	</div>
 </body>
 </html>
