--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>🛠️ Installation</h2>
 <p>Download the <code>tunnel</code> folder along with the <code>.htaccess</code> file from the <a href="https://github.com/ReactiveMatter/tunnelcms">Github directory</a> <code>https://github.com/ReactiveMatter/tunnelcms</code>.</p>
 <p>Place them in the root of your website, and run <code>composer install</code> in tunnel directory.</p>
-<p>If you don't want to use composer, download the <a href="https://github.com/ReactiveMatter/tunnelcms/releases/tag/public">latest release</a> and place them in the root of your website.</p>
+<p>If you don't want to use composer, download the <a href="https://github.com/ReactiveMatter/tunnelcms/releases/tag/public">latest release</a> and place contents in the root of your website.</p>
 <p>Tunnel CMS will render your markdown files dynamically, so that you can focus on writing.</p>
 <h2>📝 YAML frontmatter</h2>
 <p>Tunnel CMS parses YAML front matter from the markdown files and serializes them in the <code>$page</code> variable. This can be used by the layout to display content.</p>
